# ai-ingestion-retrieval-platform

./: .coverage  .env.example  .gitignore  README.md  pyproject.toml  token.py
.github/workflows/: tests.yml
src/ai_ingestion_retrieval_platform/: __init__.py  main.py
src/ai_ingestion_retrieval_platform/api/dependencies/: auth.py  http_client.py  rate_limit.py  settings.py
src/ai_ingestion_retrieval_platform/api/routes/: health.py  ingestion.py  metrics.py
src/ai_ingestion_retrieval_platform/core/: config.py  content_sniffing.py  http_client.py  limits.py  logging.py  metrics.py  response_admission.py  url_safety.py
src/ai_ingestion_retrieval_platform/middleware/: request_logging.py
src/ai_ingestion_retrieval_platform/schemas/: ingestion.py  parsing.py
src/ai_ingestion_retrieval_platform/services/: fetching.py  ingestion.py  parsing.py
tests/: conftest.py
tests/fixtures/: pdf_bytes.py
tests/integration/api/: test_health_routes.py  test_ingestion_routes.py  test_metrics_route.py
tests/integration/app/: test_lifespan.py
tests/performance/: test_ingestion_latency.py
tests/unit/api/dependencies/: test_auth.py  test_http_client_dependency.py  test_rate_limit.py
tests/unit/core/: test_config.py  test_content_sniffing.py  test_response_admission.py  test_url_safety.py
tests/unit/middleware/: test_request_logging.py
tests/unit/services/: test_ingestion_batch.py  test_ingestion_errors.py  test_ingestion_fetch.py  test_parsing.py
