# Engineering Contract: defines the project package, supported Python version, dependencies, and test/lint tooling.

[project]
name = "ai-ingestion-retrieval-platform"
version = "0.1.0"
description = "Production-grade AI ingestion and retrieval platform built with FastAPI, async Python, and distributed backend patterns."
readme = "README.md"
authors = [
    { name = "Alexander Petrovski", email = "apfb11@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "httpx>=0.28.1",
    "limits[async-redis]>=5.8.0",
    "prometheus-client>=0.25.0",
    "pydantic-settings>=2.14.1",
    "pypdf>=6.14.2",
    "redis>=8.0.1",
    "structlog>=25.5.0",
    "tenacity>=9.1.4",
]

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "respx>=0.23.1",
    "ruff>=0.15.15",
]

[tool.ruff]
line-length = 88
target-version = "py314"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
addopts = [
    "-q",
    "--cov=src/ai_ingestion_retrieval_platform",
    "--cov-report=term-missing",
    "--cov-fail-under=90",
]
